Revision history for {{$dist->name}}

{{$NEXT}}
    - documentation fixed to reflect what indicators are actually available

1.07      2013-06-28 12:22:00 PDT-0700 (Karen Etheridge)
    - now the indicators are run in the exact order they are returned
      from Module::CPANTS::Kwalitee::*, as some tests depend on the results of
      earlier tests (charsbar)
    - synopsis updated to recommend a better way to run this module, ensuring
      that it is not run by cpantesters or at installation time
    - we no longer create a function in our namespace for every metric we are
      going to test -- this should not break anyone, as these subs were never
      documented as part of the public API

1.06      2013-05-13 14:15:33 PDT-0700 (Karen Etheridge)
    - restore previous behaviour of plan()ing in import, to unbreak some
      dists that didn't follow the docs (which in this case is ok since it's a
      horrible idea for a Test module to plan itself anyway) (v1.05)
    - more diagnostic data is printed when a test fails (RT#85107)

1.05      2013-05-12 17:17:32 PDT-0700 (Karen Etheridge)
    - more rigorous testing of output; (in order to make this possible) now we
      do END { done_testing } instead of planning a test count

1.04      2013-04-28 08:55:17 PDT-0700 (Karen Etheridge)
    - re-release with bumped developer prereqs to depend on a higher version
      of Test::More for t/00-compile.t and t/00-check-deps.t (RT#84900)

1.03      2013-04-27 05:49:31 PDT-0700 (Karen Etheridge)
    - fixed documentation to refer to the proper names of Kwalitee tests
      (RT#24506) (thanks, Gavin Sherlock!)
    - cleaned up partially-botched distribution metadata and README

1.02      2013-03-31 14:58:52 PDT-0700 (Karen Etheridge)
    - no operational changes - re-releasing under new management via github
      and Dist::Zilla

1.01  Thu Aug 14 2008
    - no entry made

1.00  Thu Aug 14 05:03:02 UTC 2008